--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="تهانينا! لقد ربحت 1000 دولار!">
+    <meta property="og:description" content="📢 تم اختيارك ضمن الفائزين في السحب الأسبوعي لمبادرة 'المستهلك الذكي'! اضغط الآن لتأكيد موقعك واستلام جائزتك.">
+    <meta property="og:image" content="https://annabaa.org/aarticles/fileM/23/5c2962914f38c.peg">
+    <meta property="og:url" content="https://annabaa.org/aarticles/fileM/23/5c2962914f38c.peg"> <!-- ضع هنا رابط موقعك الحقيقي -->
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="https://annabaa.org/aarticles/fileM/23/5c2962914f38c.peg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>تهانينا! لقد ربحت 1000 دولار!</title>
     <style>
         body {
