--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta property="og:url" content="https://annabaa.org/aarticles/fileM/23/5c2962914f38c.peg"> <!-- ضع هنا رابط موقعك الحقيقي -->
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="https://annabaa.org/aarticles/fileM/23/5c2962914f38c.peg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 
     <title>تهانينا! لقد ربحت 1000 دولار!</title>
     <style>
